--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<app-header />
-<div class="container-fluid">
-  <router-outlet />
+<app-nav />
+
+<div class="header bg-[#5ad5d9] rounded-b-[50%] rounded-br-[30px] rounded-bl-[30px] mb-5 mt-[70px] flex items-center justify-center" style="padding: 32px 32px 71px;">
+  <div class="text-4xl text-black mt-5">ESHOP</div>
 </div>
 
+
+<router-outlet />
