--- a/src/app/e-shop/components/cart/cart.component.html
+++ b/src/app/e-shop/components/cart/cart.component.html
@@ -1,8 +1,13 @@
-<div class="row mb-3">
-  <app-cart-list/>
-</div>
-<div class="row">
-  <div class="offset-md-6 col-md-6">
-    <app-cart-total />
+<div class="max-w-4xl mx-auto p-4">
+  <!-- Cart List Section -->
+  <div class="mb-6">
+    <app-cart-list />
+  </div>
+
+  <!-- Cart Total Section -->
+  <div class="flex justify-end">
+    <div class="w-full max-w-sm">
+      <app-cart-total />
+    </div>
   </div>
 </div>
