--- a/src/app/e-shop/components/product/product-item/product-item.component.scss
+++ b/src/app/e-shop/components/product/product-item/product-item.component.scss
@@ -1,17 +1,17 @@
-.card-img-top {
-  width: 100%;
-  min-height: 250px;
-  max-height: 250px;
-  object-fit: contain;
-  padding: 30px;
-  cursor: pointer;
-  transition: transform .5s;
-}
+// .card-img-top {
+//   width: 100%;
+//   min-height: 250px;
+//   max-height: 250px;
+//   object-fit: contain;
+//   padding: 30px;
+//   cursor: pointer;
+//   transition: transform .5s;
+// }
 
-.card-img-top:hover {
-  transform: scale(1.05);
-}
+// .card-img-top:hover {
+//   transform: scale(1.05);
+// }
 
-.icon {
-  color: yellow;
-}
+// .icon {
+//   color: yellow;
+// }
