--- a/src/app/e-shop/components/product/product-list/product-list.component.html
+++ b/src/app/e-shop/components/product/product-list/product-list.component.html
@@ -1,17 +1,17 @@
-@if (products().length) {
-  <div class="row">
-  @for (product of products(); track product.id) {
-    <div class="col-md-4">
-      <app-product-item [item]="product"/>
-    </div>
-  }
+@let productLength = products().length;
+
+@if (productLength) {
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+    @for (product of products(); track product.id) {
+      <app-product-item [item]="product" class="flex-grow"/>
+    }
   </div>
 } @else {
-  <span>Sorry, No Product availbale</span>
+  <app-data-not-found />
 }
 
 @if (errorMessage) {
-  <div class="alert alert-danger">
-    {{errorMessage }}
+  <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+    {{ errorMessage }}
   </div>
 }
