--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,14 +1,29 @@
-<nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
-  <a class="navbar-brand" [routerLink]="['/home']">ESHOP</a>
-  <ul class="nav nav-pills">
-    <a class="btn btn-primary position-relative mt-2" [routerLink]="['/cart']">
-      <i class="fa fa-cart-shopping"></i>
-      @if (cartCount()) {
-      <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-        {{cartCount()}}
-      </span>
-      }
+<nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600">
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+    <a [routerLink]="['/home']" class="flex items-center space-x-3 rtl:space-x-reverse">
+      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">ESHOP</span>
     </a>
-
-  </ul>
+    <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
+      <div class="relative inline-block">
+        <a [routerLink]="['/cart']" class="relative flex items-center justify-center w-10 h-10 text-white bg-[#e2250c] rounded-full shadow-lg hover:bg-[#e2250c]/90 focus:outline-none focus:ring-2 focus:ring-[#e2250c] transition-transform transform hover:scale-105">
+          <i class="fas fa-shopping-cart text-sm"></i>
+          @if (cartCount()) {
+            <div class="absolute top-0 right-0 flex items-center justify-center w-4 h-4 text-xs text-white bg-[#003366] rounded-full -mt-1 -mr-1">
+              {{ cartCount() }}
+            </div>
+          }
+        </a>
+      </div>
+    </div>
+    <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
+      <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+        <li>
+          <a [routerLink]="['/home']" class="block py-2 px-3 text-white bg-[#e2250c] rounded md:bg-transparent md:text-[#e2250c] md:p-0 md:dark:text-[#e2250c]" aria-current="page">Home</a>
+        </li>
+        <li>
+          <a [routerLink]="['/new-product']" class="block py-2 px-3 text-gray-900 rounded hover:bg-[#e2250c]/10 md:hover:bg-transparent md:hover:text-[#e2250c] md:p-0 md:dark:hover:text-[#e2250c] dark:text-white dark:hover:bg-[#e2250c]/10 dark:hover:text-[#e2250c] md:dark:hover:bg-transparent dark:border-gray-700">New Product</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
